--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="3;url=https://mardifa47.github.io/portofolio_Muhammad_Ardifa/portofolio/">
   </head>
   <script>
-    aler("SELAMAT DATANG :) ");
+    alert("SELAMAT DATANG :) ");
   </script>
 </html>
