--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -110,6 +110,7 @@
         /* Contact */
         #contact {
             background-color: var(--secondary-color);
+            padding-bottom: 10px;
             color: white;
         }
         
@@ -227,7 +228,7 @@
     <!-- Portofolio -->
     <section id="portfolio">
         <div class="container">
-            <h2 class="text-center section-title">Proyek Terbaru</h2>
+            <h2 class="text-center section-title">Portofolio</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card project-card">
@@ -264,58 +265,41 @@
     </section>
 
     <!-- Kontak -->
-    <section id="contact">
-        <div class="container">
-            <h2 class="text-center section-title text-white">Hubungi Saya</h2>
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="mb-4">
-                        <h4 class="mb-4">Informasi Kontak</h4>
-                        <div class="d-flex align-items-start mb-3">
+<!-- Kontak -->
+<section id="contact">
+    <div class="container">
+        <h2 class="text-center section-title text-white">Hubungi Saya</h2>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="mb-4">
+                    <div class="d-flex justify-content-between mb-3">
+                        <div class="d-flex align-items-start">
                             <i class="fas fa-map-marker-alt contact-icon mt-1"></i>
-                            <div>
+                            <div class="ms-2">
                                 <h5 class="mb-1">Lokasi</h5>
                                 <p>Padang, Indonesia</p>
                             </div>
                         </div>
-                        <div class="d-flex align-items-start mb-3">
+                        <div class="d-flex align-items-start">
                             <i class="fas fa-envelope contact-icon mt-1"></i>
-                            <div>
+                            <div class="ms-2">
                                 <h5 class="mb-1">Email</h5>
                                 <p>muhammadardifa123@gmail.com</p>
                             </div>
                         </div>
-                        <div class="d-flex align-items-start mb-3">
+                        <div class="d-flex align-items-start">
                             <i class="fas fa-phone-alt contact-icon mt-1"></i>
-                            <div>
+                            <div class="ms-2">
                                 <h5 class="mb-1">Telepon</h5>
                                 <p>+62 897 8501 668</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-7">
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <input type="text" class="form-control" placeholder="Nama Anda" required>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <input type="email" class="form-control" placeholder="Email Anda" required>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Subjek">
-                        </div>
-                        <div class="mb-3">
-                            <textarea class="form-control" rows="5" placeholder="Pesan Anda" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Kirim Pesan</button>
-                    </form>
-                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="text-center py-4">
