--- a/portofolio/aplikasi mobile.html
+++ b/portofolio/aplikasi mobile.html
@@ -114,21 +114,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="portofolio.html">Home</a>
+                        <a class="nav-link" href="portofolio.html#portfolio">Home</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section id="home" >
-    <div style="display: flex;">
-    <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" class="card-img-top rounded-circle project-img" alt="Project 3">
-    <div class="text-center mt-5">
-        <h5>Aplikasi mobile adalah perangkat lunak yang dirancang untuk digunakan pada perangkat mobile, seperti smartphone, tablet, atau jam tangan digital.
+    <section id="home" class="container text-center">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+    <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" class="img-fluid rounded-circle profile-img" alt="Project 3">
+            </div>
+    <div class="col-md-6 mt-4">
+        <h6>Aplikasi mobile adalah perangkat lunak yang dirancang untuk digunakan pada perangkat mobile, seperti smartphone, tablet, atau jam tangan digital.
             Aplikasi ini dapat diunduh dan diinstal dari toko aplikasi seperti Google Play Store atau App Store.
             Ada beberapa aplikasi mobile untuk layanan kesehatan yang memiliki fitur appointment dokter dan telemedicine, di antaranya Halodoc, Alodokter, KlikDokter, dan Good Doctor. 
-        </h5>
+        </h6>
     </div>
     </section>
 
