Update sistem manajemen konten.html

--- a/portofolio/sistem manajemen konten.html
+++ b/portofolio/sistem manajemen konten.html
@@ -113,22 +113,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="portofolio.html">Home</a>
+                        <a class="nav-link active" href="portofolio.html#portfolio">Home</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section id="home" >
-        <div style="display: flex;">
-        <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" class="card-img-top rounded-circle project-img" alt="Project 2">
-         <div class="text-center mt-5">
-            <h5>Sistem manajemen konten membantu Anda membuat, mengelola, dan menerbitkan konten di web. Sistem ini juga membantu menjaga konten tetap teratur dan mudah diakses sehingga dapat digunakan dan digunakan kembali secara efektif.
+    <section id="home" class="container text-center">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+        <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" class="img-fluid rounded-circle profile-img" alt="Project 2">
+            </div>
+        <div class="col-md-6 mt-4">
+            <h6>Sistem manajemen konten membantu Anda membuat, mengelola, dan menerbitkan konten di web. Sistem ini juga membantu menjaga konten tetap teratur dan mudah diakses sehingga dapat digunakan dan digunakan kembali secara efektif.
                 CMS dapat membantu perusahaan menghemat biaya teknis dan mengelola konten tanpa perlu berinvestasi dalam tim pengembangan konten penuh waktu. 
                 Contoh CMS 
                 WordPress, Joomla, Drupal, Prestashop, Magento, Shopify, MODX, TYPO3.
-            </h5>
+            </h6>
          </div>
         </section>
 
