Update aplikasi e commerce.html

--- a/portofolio/aplikasi e commerce.html
+++ b/portofolio/aplikasi e commerce.html
@@ -113,22 +113,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="portofolio.html">Home</a>
+                        <a class="nav-link active" href="portofolio.html#portfolio">Home</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section id="home" >
-        <div style="display: flex;">
-        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" class="card-img-top rounded-circle project-img" alt="Project 1">
-        <div class="text-center mt-5">
-            <h5>Aplikasi e-commerce adalah aplikasi yang memungkinkan pengguna untuk berbelanja secara daring. Aplikasi ini berfungsi untuk menampilkan produk, memfasilitasi pembayaran, dan mengatur pengiriman. 
-                E-commerce atau perdagangan elektronik adalah segala kegiatan jual beli yang dilakukan secara online. E-commerce dapat dilakukan dalam berbagai bentuk, seperti business to business (B2B) dan business to consumer (B2C). 
-            </h5>
+    <section id="home" class="container text-center">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80" class="img-fluid rounded-circle profile-img" alt="Project 1">
+            </div>
+            <div class="col-md-6 mt-4">
+                <h6>Aplikasi e-commerce adalah aplikasi yang memungkinkan pengguna untuk berbelanja secara daring. Aplikasi ini berfungsi untuk menampilkan produk, memfasilitasi pembayaran, dan mengatur pengiriman. 
+                    E-commerce atau perdagangan elektronik adalah segala kegiatan jual beli yang dilakukan secara online. E-commerce dapat dilakukan dalam berbagai bentuk, seperti business to business (B2B) dan business to consumer (B2C). 
+                </h6>
+            </div>
         </div>
-        </section>
+    </section>
 
     <!-- Footer -->
     <footer class="text-center py-4">
